--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     font-family: 'Varela Round';
 	max-width: 100vw;
-	/* overflow-x: hidden; */
+	overflow-x: hidden;
 }
 
 a {
